syntax = "proto3";

package variables.v1;

import "tagger/tagger.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/components/variables/v1";

// EnvVar represents an env var that is injected into a live container
message EnvVar {
  bool sensitive = 2;
  string name = 3;
  string value = 4;
}

// EnvVars is a list of env vars, and exposes methods to convert to maps etc.
message EnvVars {
  repeated EnvVar env = 1 [(tagger.tags) = "faker:\"envVars\""];
}
